rewrite! rewrite plugin to fix numerous issues and add features (#147)