@@ -1,92 +1,132 @@
+/*
+ * Copyright (C) 2024 Figure Technologies
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+import com.adarshr.gradle.testlogger.theme.ThemeType
+import io.gitlab.arturbosch.detekt.Detekt
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.gradle.api.tasks.testing.logging.TestLogEvent.FAILED
+import org.gradle.api.tasks.testing.logging.TestLogEvent.SKIPPED
+import org.gradle.api.tasks.testing.logging.TestLogEvent.STANDARD_ERROR
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import org.jetbrains.kotlin.config.KotlinCompilerVersion.VERSION as KOTLIN_VERSION
 
-@Suppress("DSL_SCOPE_VIOLATION")
 plugins {
-    alias(libs.plugins.github.release)
     alias(libs.plugins.kotlin.jvm)
-    alias(libs.plugins.semver)
+    alias(libs.plugins.publish.plugin)
+
+    alias(libs.plugins.detekt)
+    alias(libs.plugins.spotless)
+    alias(libs.plugins.best.practices)
+    alias(libs.plugins.github.release)
     alias(libs.plugins.dependency.analysis)
+    alias(libs.plugins.binary.compatibility.validator)
 
-    id("local.publishing") // maven and gradle publishing info - build-logic/publishing
-    id("local.analysis-conventions")
-    id("local.licenser")
+    alias(libs.plugins.test.logger)
+    alias(libs.plugins.gradle.testkit)
+
+    idea
+    signing
 }
 
-semver {
-    tagPrefix("v")
-    initialVersion("0.0.1")
-    findProperty("semver.overrideVersion")?.toString()?.let { overrideVersion(it) }
-    findProperty("semver.modifier")?.toString()
-        ?.let { versionModifier(buildVersionModifier(it)) } // this is only used for non user defined strategies, ie predefined Flow or Flat
+group = "com.figure.gradle.semver"
+version = "2.0.0"
+
+val testImplementation: Configuration by configurations.getting
+
+val functionalTestImplementation: Configuration by configurations.getting {
+    extendsFrom(testImplementation)
 }
 
-configurations.all {
-    resolutionStrategy {
-        eachDependency {
-            if (requested.group == "org.jetbrains.kotlin") {
-                useVersion(libs.versions.kotlin.get())
-            }
-        }
+sourceSets {
+    named("functionalTest") {
+        compileClasspath += sourceSets.main.get().compileClasspath + sourceSets.main.get().output
+        runtimeClasspath += output + compileClasspath
     }
-}
-
-repositories {
-    mavenCentral()
 }
 
 dependencies {
-    listOf(
-        gradleApi(),
-        gradleKotlinDsl(),
-        libs.eclipse.jgit.eclipseJgit,
-    ).forEach {
-        implementation(it)
+    implementation(gradleKotlinDsl())
+
+    implementation(libs.jgit)
+    implementation(libs.kotlin.semver)
+
+    testImplementation(gradleTestKit())
+    testImplementation(libs.kotest.runner)
+    testImplementation(libs.kotest.datatest)
+
+    functionalTestImplementation(libs.testkit.support)
+}
+
+tasks {
+    withType<KotlinCompile>().configureEach {
+        compilerOptions {
+            freeCompilerArgs.addAll("-version", "-Xjsr305=strict", "-opt-in=kotlin.RequiresOptIn")
+        }
     }
 
-    // Leak semver library users of this plugin so that they can implement their own versionModifier strategy
-    // TODO: For v2, remove need for semver jar for consumers. They shouldn't need to know about this detail
-    listOf(
-        libs.swiftzer.semver,
-    ).forEach {
-        api(it)
+    withType<Test>().configureEach {
+        useJUnitPlatform()
+        // To be able to use withEnvironment: https://github.com/kotest/kotest/issues/2849
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED")
+        testLogging {
+            showStandardStreams = false
+            showCauses = true
+            showStackTraces = true
+            events = setOf(SKIPPED, FAILED, STANDARD_ERROR)
+            exceptionFormat = TestExceptionFormat.FULL
+        }
     }
 
-    listOf(
-        gradleTestKit(),
-        libs.bundles.kotest,
-    ).forEach {
-        testImplementation(it)
+    wrapper {
+        distributionType = Wrapper.DistributionType.ALL
+    }
+
+    check {
+        dependsOn("detekt")
+    }
+
+    withType<Detekt>().configureEach {
+        reports {
+            txt.required.set(true)
+            html.required.set(true)
+            xml.required.set(false)
+            sarif.required.set(false)
+        }
+    }
+
+    register("fmt") {
+        group = "verification"
+        description = "Format all code using configured formatters. Runs 'spotlessApply'"
+        dependsOn("spotlessApply")
+    }
+
+    register("lint") {
+        group = "verification"
+        description = "Check all code using configured linters. Runs 'spotlessCheck'"
+        dependsOn("spotlessCheck")
     }
 }
 
-// Enforce Kotlin version coherence
-configurations.all {
-    resolutionStrategy.eachDependency {
-        if (requested.group == "org.jetbrains.kotlin" && requested.name.startsWith("kotlin")) {
-            useVersion(KOTLIN_VERSION)
-            because("All Kotlin modules should use the same version, and compiler uses $KOTLIN_VERSION")
-        }
+idea {
+    module {
+        // Marks the functionTest as a test source set
+        testSources.from(sourceSets.functionalTest.get().allSource.srcDirs)
     }
 }
 
 kotlin {
-    jvmToolchain(11)
-}
-
-tasks.withType<KotlinCompile>().configureEach {
-    compilerOptions {
-        jvmTarget.set(JvmTarget.JVM_11)
-        freeCompilerArgs.addAll(
-            "-version",
-            "-Xjsr305=strict",
-            "-opt-in=kotlin.RequiresOptIn",
-        )
-        verbose.set(true)
-    }
+    jvmToolchain(17)
 }
 
 java {
@@ -94,44 +134,138 @@ java {
     withJavadocJar()
 }
 
-tasks.withType<Test>().configureEach {
-    useJUnitPlatform()
-    testLogging {
-        showStandardStreams = true
-        showCauses = true
-        showStackTraces = true
-        events = TestLogEvent.values().toSet()
-        exceptionFormat = TestExceptionFormat.FULL
+detekt {
+    buildUponDefaultConfig = true
+    allRules = false
+    config.from(files("detekt.yml"))
+}
+
+spotless {
+    format("misc") {
+        target("*.md", "*.gitignore", "*.yml", "*.yaml", "*.toml", "*.properties")
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
+
+    kotlin {
+        target("src/**/*.kt")
+        ktlint()
+        trimTrailingWhitespace()
+        endWithNewline()
+        licenseHeaderFile(rootProject.file("spotless/license.kt"))
+    }
+
+    kotlinGradle {
+        target("*.kts", "src/**/*.kts")
+        ktlint()
+        trimTrailingWhitespace()
+        endWithNewline()
+        licenseHeaderFile(
+            rootProject.file("spotless/license.kt"),
+            "(import|plugins|buildscript|dependencies|pluginManagement|dependencyResolutionManagement)",
+        )
     }
 }
 
-// project version, also used for publishing
-version = semver.version
+testlogger {
+    theme = ThemeType.STANDARD
+    showCauses = true
+    slowThreshold = 1000
+    showSummary = true
+    showStandardStreams = false
+}
 
-val githubTokenValue: String = findProperty("githubToken")?.toString() ?: System.getenv("GITHUB_TOKEN")
+apiValidation {
+    ignoredPackages += listOf(
+        // Internal package is not part of the public API
+        "$group.internal",
+    )
+}
+
+class PublishingConstants {
+    val name = "Gradle Semver Plugin"
+    val description = "Gradle Plugin for Automatic Semantic Versioning"
+    val pluginImplementation = "$group.SemverPlugin"
+    val tags = listOf("semver", "versioning", "git")
+
+    val website = "https://figuretechnologies.github.io/gradle-semver-plugin"
+    val vcsUrl = "https://github.com/figuretechnologies/gradle-semver-plugin.git"
+    val scmUrl = "scm:git:git://github.com/figuretechnologies/gradle-semver-plugin.git"
+}
+
+val info = PublishingConstants()
+
+gradlePlugin {
+    website = info.website
+    vcsUrl = info.vcsUrl
+    plugins {
+        register("semver") {
+            id = group.toString()
+            displayName = info.name
+            description = info.description
+            implementationClass = info.pluginImplementation
+        }
+    }
+}
+
+publishing {
+    afterEvaluate {
+        publications {
+            withType<MavenPublication> {
+                pom {
+                    name = info.name
+                    description = info.description
+                    licenses {
+                        license {
+                            name = "The Apache Software License, Version 2.0"
+                            url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
+                            distribution = "repo"
+                        }
+                    }
+                    developers {
+                        developer {
+                            id.set("figure-oss")
+                            name.set("Figure OSS Engineers")
+                            email.set("oss@figure.com")
+                        }
+                        developer {
+                            id = "tcrawford-figure"
+                            name = "Tyler Crawford"
+                            email = "tcrawford@figure.com"
+                        }
+                        developer {
+                            id.set("ahatzz11")
+                            name.set("Alex Hatzenbuhler")
+                            email.set("ahatzenbuhler@figure.com")
+                        }
+                        developer {
+                            id.set("jonasg13")
+                            name.set("Jonas Gorauskas")
+                            email.set("jgorauskas@figure.com")
+                        }
+                    }
+                    scm {
+                        connection = info.scmUrl
+                        developerConnection = info.scmUrl
+                        url = info.website
+                    }
+                }
+            }
+        }
+    }
+}
+
+/**
+ * Skip signing if the signing.enabled property is not set
+ */
+tasks.withType<Sign>().configureEach {
+    // Must be done outside the onlyIf block for configuration cache compatibility
+    val shouldSign = providers.gradleProperty("signing.enabled").isPresent
+    onlyIf("signing.enabled") { shouldSign }
+}
 
 githubRelease {
-    apiEndpoint = "https://api.github.com" // should only change for GitHub enterprise users
-    body = ""
-    draft = false
-    dryRun = false // by default false; you can use this to see what actions would be taken without making a release
     generateReleaseNotes = true
-    overwrite = false
     owner = "FigureTechnologies"
-    prerelease = false
-    repo = "gradle-semver-plugin" // Should automatically pick up your project name, overwrite this if you need something else
-    targetCommitish = System.getenv("TARGET_COMMIT_ISH")?.takeIf { it.isNotBlank() } ?: "main"
-
-    // This is your personal access token with Repo permissions
-    // You get this from your user settings > developer settings > Personal Access Tokens
-    token(githubTokenValue)
+    providers.environmentVariable("GITHUB_TOKEN").map { token(it) }
 }
-
-tasks.wrapper {
-    distributionType = Wrapper.DistributionType.ALL
-}
-
-logger.lifecycle("JDK toolchain version: ${java.toolchain.languageVersion.get()}")
-logger.lifecycle(
-    "Kotlin version: ${extensions.findByType<org.jetbrains.kotlin.gradle.dsl.KotlinTopLevelExtension>()?.coreLibrariesVersion}",
-)
